@@ -17,14 +17,21 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
-@DisplayName("Update Filter accuracy test - Update TAble empty")
-public class UpdateProductList_EmptyUpdateTable_Test {
+@DisplayName("Update list accuracy test - Update list precision")
+public class UpdateProductList_UpdateList_Test {
   List<Product> localProductList = Arrays.asList(
       new Product(1, "7891008121025","CAIXA DE BOMBOM GAROTO 400G", new BigDecimal("6.99")),
       new Product(2, "7891000140307","LEITE EM PO INTEGRAL NINHO 400G", new BigDecimal("13.99")),
       new Product(3, "7891000064276","MUCILON ARROZ NESTLE 400G", new BigDecimal("7.99")),
-      new Product(4, "7898461320323","ARROZ DOURA TIPO 1 COM 5 KG", new BigDecimal("11.5")));
-  List<Product> updateProductList = List.of();
+      new Product(4, "7898461320323","ARROZ DOURA TIPO 1 COM 5 KG", new BigDecimal("11.5"))
+  );
+  List<Product> updateProductList = Arrays.asList(
+      new Product(1, "7891008121025","CAIXA DE BOMBOM GAROTO 400G", new BigDecimal("6.99")),
+      new Product(2, "7891000140307","LEITE EM PO INTEGRAL NINHO 400G", new BigDecimal("13.99")),
+      new Product(3, "7891000064276","MUCILON ARROZ NESTLE 400G", new BigDecimal("7.99")),
+      new Product(4, "7898461320323","ARROZ DOURA TIPO 1 COM 5 KG", new BigDecimal("11.3")),
+      new Product(5, "9998461320323","ARROZ", new BigDecimal("99.9"))
+      );
 
   LocalData localData;
   UpdateData updateData;
@@ -40,16 +47,14 @@ public class UpdateProductList_EmptyUpdateTable_Test {
   }
 
   @Test
-  @DisplayName("Error: Empty source/update table - Nothing to update.")
-  void emptyUpdateTable() {
-
-    try {
-      updateList.getList();
-      fail("Empty table check success...");
-    } catch (CoreError e) {
-      assertEquals(e.getMessage(), "Error: Empty source/update table - Nothing to update.");
-      System.out.println(e.getMessage());
-    }
+  @DisplayName("Success: One result expected.")
+  void updateListSizeTest() {
+    assertEquals(updateList.getList().size(), 1);
   }
 
+  @Test
+  @DisplayName("Success: Value expected")
+  void updateListValueTest() {
+    assertEquals(updateList.getList().get(0).getBarcode(), "7898461320323");
+  }
 }
